@@ -1,3 +1,9 @@
+2008-12-27  Joe English  <jenglish@users.sourceforge.net>
+
+	* generic/ttk/ttkTreeview.c: Fix inconsistent use of 
+	treeArea / headingArea; fixes [Bug 2381555]. ([$tv identify]
+	didn't work when horizontally scrolled).
+
 2008-12-21  Donal K. Fellows  <dkf@users.sf.net>
 
 	* doc/canvas.n (postscript): Regularized documentation of -channel
